--- a/styles.css
+++ b/styles.css
@@ -1577,8 +1577,8 @@ html.theme-transition {
     
     /* Mejoras para el modo presentación en móviles */
     .presentation-media {
-        max-width: 98%;
-        max-height: 85vh;
+        max-width: 100%;
+        max-height: 400px;
     }
     
     .presentation-info {
@@ -1632,13 +1632,13 @@ html.theme-transition {
     }
     
     .presentation-media-container {
-        max-height: 85% !important;
+        max-height: 400px !important;
     }
     
     .presentation-image,
     .presentation-video {
-        max-width: 98% !important;
-        max-height: 95% !important;
+        max-width: 100% !important;
+        max-height: 400px !important;
     }
     
     .presentation-date {
